Third year reference page is done with all resources and small content modification...

--- a/src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html
@@ -150,13 +150,39 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="https://drive.google.com/thumbnail?id=1ERUhpGTL8MNGLIBekc7F_ufEQIQV7_HB"
+                                src="https://drive.google.com/thumbnail?id=1LE6-oBVjBaeFjlt5j2yqYO6oEVXhNZap"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Unit 5</p>
+                            <p class="pdf-title">Unit 1</p>
                             <p class="pdf-author">Author Name : Unnkown</p>
                             <a
-                                href="https://drive.google.com/uc?export=download&id=1ERUhpGTL8MNGLIBekc7F_ufEQIQV7_HB"
+                                href="https://drive.google.com/uc?export=download&id=1LE6-oBVjBaeFjlt5j2yqYO6oEVXhNZap"
+                                class="download-link"
+                                >Download</a
+                            >
+                        </div>
+                        <div class="pdf-container">
+                            <img
+                                src="https://drive.google.com/thumbnail?id=15c1Eq37WPnvsLoKGV8C4kVG9UiewZXq0"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                alt="Curriculum1" />
+                            <p class="pdf-title">Unit 2</p>
+                            <p class="pdf-author">Author Name : Unnkown</p>
+                            <a
+                                href="https://drive.google.com/uc?export=download&id=15c1Eq37WPnvsLoKGV8C4kVG9UiewZXq0"
+                                class="download-link"
+                                >Download</a
+                            >
+                        </div>
+                        <div class="pdf-container">
+                            <img
+                                src="https://drive.google.com/thumbnail?id=1ZfgpMuu4rvXOAVLzpQUXQVNvuQ9Qif_c"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                alt="Curriculum1" />
+                            <p class="pdf-title">Unit 3</p>
+                            <p class="pdf-author">Author Name : UnnkownA</p>
+                            <a
+                                href="https://drive.google.com/uc?export=download&id=1ZfgpMuu4rvXOAVLzpQUXQVNvuQ9Qif_c"
                                 class="download-link"
                                 >Download</a
                             >
@@ -176,41 +202,13 @@
                         </div>
                         <div class="pdf-container">
                             <img
-                                src="https://drive.google.com/thumbnail?id=1ZfgpMuu4rvXOAVLzpQUXQVNvuQ9Qif_c"
+                                src="https://drive.google.com/thumbnail?id=1ERUhpGTL8MNGLIBekc7F_ufEQIQV7_HB"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Unit 3</p>
-                            <p class="pdf-author">Author Name : UnnkownA</p>
-                            <a
-                                href="https://drive.google.com/uc?export=download&id=1ZfgpMuu4rvXOAVLzpQUXQVNvuQ9Qif_c"
-                                class="download-link"
-                                >Download</a
-                            >
-                        </div>
-
-                        <div class="pdf-container">
-                            <img
-                                src="https://drive.google.com/thumbnail?id=15c1Eq37WPnvsLoKGV8C4kVG9UiewZXq0"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">Unit 2</p>
+                            <p class="pdf-title">Unit 5</p>
                             <p class="pdf-author">Author Name : Unnkown</p>
                             <a
-                                href="https://drive.google.com/uc?export=download&id=15c1Eq37WPnvsLoKGV8C4kVG9UiewZXq0"
-                                class="download-link"
-                                >Download</a
-                            >
-                        </div>
-
-                        <div class="pdf-container">
-                            <img
-                                src="https://drive.google.com/thumbnail?id=1LE6-oBVjBaeFjlt5j2yqYO6oEVXhNZap"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">Unit 1</p>
-                            <p class="pdf-author">Author Name : Unnkown</p>
-                            <a
-                                href="https://drive.google.com/uc?export=download&id=1LE6-oBVjBaeFjlt5j2yqYO6oEVXhNZap"
+                                href="https://drive.google.com/uc?export=download&id=1ERUhpGTL8MNGLIBekc7F_ufEQIQV7_HB"
                                 class="download-link"
                                 >Download</a
                             >
@@ -247,7 +245,7 @@
                                 >Download</a
                             >
                         </div>
-                        <div class="pdf-container">
+                        <!--div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
@@ -257,7 +255,7 @@
                             <a href="document.pdf" class="download-link"
                                 >Download</a
                             >
-                        </div>
+                        </div-->
                     </div>
                 </div>
             </section>
@@ -300,27 +298,8 @@
                     <div class="block-item">
                         <h3>Practicals</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
@@ -350,81 +329,24 @@
                     <div class="block-item">
                         <h3>Presentations</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Report</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Micro-Project</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
