--- a/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
@@ -131,32 +131,14 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1_QDQM4wvJOfgk7HfNSsZ2bnjsz9lHwFx"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <a href="document.pdf" class="download-link"
+                            <p class="pdf-title">Linux Programming Lab<br>(6P404)</p>
+                            <p class="pdf-author">GPCS</p>
+                            <a
+                                href="https://drive.google.com/file/d/1_QDQM4wvJOfgk7HfNSsZ2bnjsz9lHwFx/view?usp=drive_link"
+                                class="download-link"
                                 >Download</a
                             >
                         </div>
@@ -166,78 +148,14 @@
                 <div class="block-item">
                     <h3>Notes</h3>
                     <div class="sub-section">
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
+                        <span class="tag">Not Avaliable Yet... </span>
                     </div>
                 </div>
 
                 <div class="block-item">
                     <h3>Reference Books</h3>
                     <div class="sub-section">
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
+                        <span class="tag">Not Avaliable Yet... </span>
                     </div>
                 </div>
             </section>
@@ -246,84 +164,24 @@
                 <h2>Other Material</h2>
                 <div class="horizontal-scroll">
                     <div class="block-item">
+                        <h3>Question Paper</h3>
+                        <div class="sub-section">
+                            <span class="tag">Not Avaliable Yet... </span>
+                        </div>
+                    </div>
+
+                    <div class="block-item">
                         <h3>Practicals</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Assignments</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-item">
-                        <h3>Tutorials</h3>
-                        <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
+                            <span class="tag">Not Avaliable Yet... </span>
                         </div>
                     </div>
                 </div>
@@ -334,81 +192,24 @@
                     <div class="block-item">
                         <h3>Presentations</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Report</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Micro-Project</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
@@ -420,22 +221,22 @@
                 <div class="horizontal-scroll">
                     <div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                            src="https://th.bing.com/th?&id=OVP.VVJRkEYj-JUvyfaWuVL6awHgFo&w=276&h=154&c=7&pid=2.1&rs=1"
+                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
-                        <p class="pdf-title">Video Title</p>
-                        <p class="pdf-author">Author Name</p>
-                        <a href="document.pdf" class="download-link">View</a>
+                        <p class="pdf-title">Full Linux Course for Beginners</p>
+                        <p class="pdf-author">Author : Unknown</p>
+                        <a href="https://www.bing.com/videos/riverview/relatedvideo?&q=basic+linux+programmings&&mid=8B70619996E807B1178F8B70619996E807B1178F&&FORM=VRDGAR" class="download-link">View</a>
                     </div>
-                    <div class="pdf-container">
+                    <!--div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                            src="https://th.bing.com/th?id=OVP.SafRnNPdKCQs3ke-bTmgcAHgFo&w=424&h=238&c=7&rs=1&qlt=90&pid=2.1"
+                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
-                        <p class="pdf-title">Video Title</p>
-                        <p class="pdf-author">Author Name</p>
-                        <a href="document.pdf" class="download-link">View</a>
-                    </div>
+                        <p class="pdf-title">C For Beginners</p>
+                        <p class="pdf-author">Author : Unknown</p>
+                        <a href="https://www.bing.com/videos/riverview/relatedvideo?q=c+language+playlist+by+apna+collage&&mid=4AAF24F521366A28FD4A4AAF24F521366A28FD4A&FORM=VCGVRP" class="download-link">View</a>
+                    </div-->
                 </div>
             </section>
             <section class="section">
