--- a/src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html
@@ -136,12 +136,12 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1L6xBOf3-n_pQXXL_mR4hIbrS-W5wVWAc"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                            <a href="https://drive.google.com/file/d/1L6xBOf3-n_pQXXL_mR4hIbrS-W5wVWAc/view?usp=drive_link" class="download-link"
                                 >Download</a
                             >
                         </div>
