altered first,second year subject

--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -41,6 +41,8 @@
                         </li>
                         <li><a href="mailto:vishalrathod.dev@gmail.com"><i class="fa fa-envelope"></i>
                                 Vishal Rathod</a></li>
+                        <li><a href="mailto:vikaswagh2906@gmail.com"><i class="fa fa-envelope"></i>
+                                    Vikas Wagh</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
