Added the twch quiz page

--- a/events.html
+++ b/events.html
@@ -65,6 +65,29 @@
                             </button>
                         </div>
                     </div>
+
+
+                    <div
+                    class="item"
+                    style="
+                        background-image: url('/public/images/events/committee\ establishment/main.webp');
+                    "
+                      >
+                    <div class="content">
+                        <div class="name">Tech Quiz</div>
+                        <div class="des">
+                           Event Coming Soon !!!
+                        </div>
+                        <button
+                            onclick="window.location.href='/src/pages/events/tech_quiz.html';"
+                        >
+                            See More
+                        </button>
+                    </div>
+                
+                </div>
+
+
                     <div
                         class="item"
                         style="
