Added Seminar Completition Page

--- a/events.html
+++ b/events.html
@@ -70,16 +70,16 @@
                     <div
                     class="item"
                     style="
-                        background-image: url('/public/images/events/committee\ establishment/main.webp');
+                        background-image: url('/public/images/events/seminar\ presentation/poster.png');
                     "
                       >
                     <div class="content">
-                        <div class="name">Tech Quiz</div>
+                        <div class="name">Online Seminar Presentation Competition</div>
                         <div class="des">
                            Event Coming Soon !!!
                         </div>
                         <button
-                            onclick="window.location.href='/src/pages/events/tech_quiz.html';"
+                            onclick="window.location.href='/src/pages/events/seminar_competition.html';"
                         >
                             See More
                         </button>
