Added Magazines of 2024 Year

--- a/events.html
+++ b/events.html
@@ -76,7 +76,7 @@
                     <div class="content">
                         <div class="name">Online Seminar Presentation Competition</div>
                         <div class="des">
-                           Event Coming Soon !!!
+                           Get Ready !!!
                         </div>
                         <button
                             onclick="window.location.href='/src/pages/events/seminar_competition.html';"
