--- a/magazines.html
+++ b/magazines.html
@@ -53,10 +53,10 @@
                         <option value="../../public/magazines/2023-2.pdf">
                             2023 (Issue 2)
                         </option>
-                        <option value="../../public/magazines/2024.pdf">
+                        <option value="../../public/magazines/2024-1.pdf">
                             2024 (Issue 1)
                         </option>
-                        <option value="../../public/magazines/2024.pdf">
+                        <option value="../../public/magazines/2024-2.pdf">
                             2024 (Issue 2)
                         </option>
                     </select>
